# dpa

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES_v0.2.0.md  pyproject.toml  requirements-dev.txt  requirments-dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  security.yml  tests.yml
docs/: API.md  ARCHITECTURE.md  BATCH.md  BENCHMARK.md  DISTRIBUTED.md  GUIDE.md  SCALING.md
docs/releases/: README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md
examples/: batch_memory_aware_processing.py  batch_performance_optimization.py  batch_processing_strategies.py  benchmark_comparison_analysis.py  benchmark_optimization_workflow.py  benchmark_performance_profiling.py  distributed_multiprocess_coordination.py  distributed_range_splitting.py  distributed_rank_aware_generation.py  example_usage.py  integration_compatibility_demo.py
src/: batch.py  benchmark.py  distributed.py  dpa.py
tests/: test_batch.py  test_benchmark.py  test_distributed.py  test_dpa.py  test_integration_batch.py  test_integration_benchmark.py  test_integration_compatibility.py  test_integration_distributed.py
