[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpa"
version = "0.1.0"
description = "Deterministic Procedural Augmentation for reproducible machine learning"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "mod", email = "your-email@example.com"},
]
keywords = ["augmentation", "machine-learning", "data", "reproducible", "deterministic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/yourusername/dpa"
Documentation = "https://github.com/yourusername/dpa/tree/main/docs"
Repository = "https://github.com/yourusername/dpa.git"
Issues = "https://github.com/yourusername/dpa/issues"

[tool.setuptools]
py-modules = ["dpa"]

[tool.pytest.ini_options]
testpaths = ["test_dpa.py"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
]
ignore = [
    "E501",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false