[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpa"
version = "0.2.1"
description = "Deterministic Procedural Augmentation with distributed training, batch processing, and performance benchmarking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=5.9.0",
]
license = {text = "MIT"}
authors = [
    {name = "Adrian Paredez", email = "contact@paredez.dev"},
]
keywords = ["augmentation", "machine-learning", "data", "reproducible", "deterministic", "distributed-training", "batch-processing", "benchmarking", "performance", "scalable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/AdrianParedez/dpa"
Documentation = "https://github.com/AdrianParedez/dpa/tree/main/docs"
Repository = "https://github.com/AdrianParedez/dpa.git"
Issues = "https://github.com/AdrianParedez/dpa/issues"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
]
ignore = [
    "E501",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false